Can't get event name

--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -5,13 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-    <button ion-button menuToggle>Toggle Menu</button>
-
-  <ion-navbar>
-    <ion-title text-center>Evènements</ion-title>
-  </ion-navbar>
-
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title text-center>Evènements</ion-title>
+    </ion-navbar>
 </ion-header>
 
 
