--- a/src/pages/teams/teams.html
+++ b/src/pages/teams/teams.html
@@ -28,13 +28,9 @@
                 <h3>{{team.name}} ({{team.sport}})</h3>
             </button>
 
-            <button item-right (click)="toggleFavoriteTeam(team)">
-                <span *ngIf="team.favorite">
-                    <ion-icon name="star"></ion-icon>
-                </span>
-                <span *ngIf="!team.favorite">
-                    <ion-icon name="star-outline"></ion-icon>
-                </span>
+            <button item-right (click)="toggleFavoriteTeam(team)" ng-click="">
+                <ion-icon name="star" *ngIf="team.favorite"></ion-icon>
+                <ion-icon name="star-outline" *ngIf="!team.favorite"></ion-icon>
                 <!--<ion-icon name="star-outline"></ion-icon>-->
             </button>
         </ion-item>
