--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -5,15 +5,34 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
     <ion-navbar>
-        <ion-title>tournament</ion-title>
-    </ion-navbar>
 
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+
+        <ion-title text-center>
+            {{ tournamentData.name }}
+        </ion-title>
+
+        <ion-buttons right>
+            <button ion-button icon-only>
+                <ion-icon name="cog"></ion-icon>
+            </button>
+        </ion-buttons>
+    </ion-navbar>
 </ion-header>
 
+<ion-content>
 
-<ion-content padding>
-    bonjour
-    {{ tournamentData.sport }}
+    <ion-col width-100><h4><b>Type</b> {{ tournamentData.type }} </h4></ion-col>
+    <ion-col width-100><h4><b>Lieu</b> {{ tournamentData.place }} </h4></ion-col>
+
+    <ion-col width-100><h2>Liste des <b>poules</b></h2></ion-col>
+    <ion-list>
+        <button ion-item *ngFor="let poule of tournamentData.poules">
+            <h3>{{ poule.name }}</h3>
+        </button>
+    </ion-list>
+
 </ion-content>
