--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -38,7 +38,7 @@
     <ion-card>
         <ion-card-content no-padding>
 
-            <ion-list *ngFor="let match of teamData.matchs">
+            <ion-list *ngFor="let match of teamData.matches">
 
 
                 <!-- *********************************** -->
@@ -55,7 +55,13 @@
                 </ion-item>
 
                 <ion-item class="border-lose" *ngIf="match.ownScore < match.team2Score">
-                    <ion-icon name="git-network" item-left></ion-icon>
+                    {{ match.team2 }}
+                    <ion-note item-right>
+                        {{ match.ownScore }} - {{ match.team2Score }}
+                    </ion-note>
+                </ion-item>
+
+                <ion-item class="border-draw" *ngIf="(match.team1Score == match.team2Score) && (match.start == '')">
                     {{ match.team2 }}
                     <ion-note item-right>
                         {{ match.ownScore }} - {{ match.team2Score }}
@@ -63,7 +69,6 @@
                 </ion-item>
 
                 <ion-item class="border-inc" *ngIf="match.status == 'incoming' ">
-                    <ion-icon name="git-network" item-left></ion-icon>
                     {{ match.team2 }}
                     <ion-note item-right>
                         {{ match.start }}
