Change syntxes mystakes, Add trophy to team if winner, remove setting icon on team page, remove icon near match of teams

--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -11,7 +11,7 @@
             <ion-icon name="menu"></ion-icon>
         </button>
 
-        <ion-title text-center>
+        <ion-title>
             {{ tournamentData.name }}
         </ion-title>
 
