--- a/src/pages/pool/pool.html
+++ b/src/pages/pool/pool.html
@@ -11,7 +11,7 @@
             <ion-icon name="menu"></ion-icon>
         </button>
 
-        <ion-title text-center>
+        <ion-title>
             {{ tournament.name }} - {{ poolData.name }}
         </ion-title>
 
