--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -37,8 +37,7 @@
     <ion-card>
         <ion-card-content no-padding>
 
-            <ion-list *ngFor="let match of teamData.matches">
-
+            <ion-list *ngFor="let match of teamData.matches" (click)="goToPool(teamData.tournament, match.group_match_id)">
                 <ion-item class="border-win" *ngIf="match.ownScore > match.team2Score">
                     {{ match.team2 }}
                     <ion-note item-right>
@@ -66,7 +65,6 @@
                         {{ match.start }}
                     </ion-note>
                 </ion-item>
-
             </ion-list>
 
 
