--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -20,31 +20,26 @@
 
 <ion-content>
 
-    <ion-card>
-        <ion-card-content>
+    <ion-grid text-center class="white-background">
+        <ion-row style="flex-wrap: wrap;">
+            <ion-col width-50>
+                <ion-icon name="grid" class="info"></ion-icon><br/>
+                <div class="items">{{ tournamentData.type }}</div>
+            </ion-col>
+            <ion-col width-50>
+                <ion-icon name="pin" class="info"></ion-icon><br/>
+                <div class="items">{{ tournamentData.place }}</div>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
-            <ion-grid text-center>
-                <ion-row style="flex-wrap: wrap;">
-                    <ion-col width-50>
-                        <ion-icon name="grid" class="info"></ion-icon><br/>
-                        {{ tournamentData.type }}
-                    </ion-col>
-                    <ion-col width-50>
-                        <ion-icon name="pin" class="info"></ion-icon><br/>
-                        {{ tournamentData.place }}
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-
-        </ion-card-content>
-    </ion-card>
 
     <ion-col width-100><h2>Liste des <b>Participants</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding>
             <ion-list>
-                <ion-item *ngFor="let team of tournamentData.teams">
-                    <h3><div class="items" (click)="goToTeam(team)">{{ team.name }}</div></h3>
+                <ion-item *ngFor="let team of tournamentData.teams" (click)="goToTeam(team)">
+                    <div class="items">{{ team.name }}</div>
                 </ion-item>
             </ion-list>
         </ion-card-content>
@@ -55,7 +50,7 @@
         <ion-card-content no-padding>
             <ion-list>
                 <ion-item *ngFor="let group of tournamentData.group_matchs" (click)="goToPool(group)">
-                    <h3>{{ group.name }}</h3>
+                    <div class="items">{{ group.name }}</div>
                 </ion-item>
             </ion-list>
         </ion-card-content>
