--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -12,7 +12,7 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngFor="let tournament of teamData.tournament">
 
     <ion-col width-100>
         <h2>Equipe <b> {{ teamData.name }}</b>
@@ -24,8 +24,8 @@
 
             <ion-grid text-center>
                 <ion-row style="flex-wrap: wrap;">
-                    <ion-col width-25 *ngFor="let participant of teamData.participants">
-                        {{ participant.firstname }}
+                    <ion-col width-33 *ngFor="let participant of teamData.participants">
+                        <span class="items">{{ participant.firstname }}</span>
                     </ion-col>
                 </ion-row>
             </ion-grid>
@@ -33,16 +33,16 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-col width-100 *ngFor="let tournament of teamData.tournament">
+    <ion-col width-100>
         <h2>Tournoi <b> {{  tournament.name }}</b></h2>
     </ion-col>
-    <ion-card *ngFor="let tournament of teamData.tournament" (click)="goToTournament(tournament)">
-        <ion-card-content>
+    <ion-card (click)="goToTournament(tournament)">
+        <ion-card-content no-padding>
 
             <ion-grid text-center>
                 <ion-row style="flex-wrap: wrap;">
                     <ion-col width-50>
-                        <ion-icon name="game-controller-b" class="info"></ion-icon><br/>
+                        <ion-icon name="football" class="info"></ion-icon><br/>
                         <div class="items">{{ teamData.sport }}</div>
                     </ion-col>
                     <ion-col width-50>
@@ -58,32 +58,32 @@
     <ion-col width-100><h2>Liste des <b>Matchs</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding>
-            <ion-list *ngFor="let match of teamData.matches" (click)="goToPool(teamData.tournament, match.group_match_id)">
+            <ion-list *ngFor="let match of teamData.matches" (click)="goToPool(tournament, match.group_match_id)">
                 <ion-item class="border-win" *ngIf="match.ownScore > match.team2Score">
-                    {{ match.team2 }}
+                    <span class="items">{{ match.team2 }}</span>
                     <ion-note item-right>
-                        {{ match.ownScore }} - {{ match.team2Score }}
+                        <span class="items">{{ match.ownScore }} - {{ match.team2Score }}</span>
                     </ion-note>
                 </ion-item>
 
                 <ion-item class="border-lose" *ngIf="match.ownScore < match.team2Score">
-                    {{ match.team2 }}
+                    <span class="items">{{ match.team2 }}</span>
                     <ion-note item-right>
-                        {{ match.ownScore }} - {{ match.team2Score }}
+                        <span class="items">{{ match.ownScore }} - {{ match.team2Score }}</span>
                     </ion-note>
                 </ion-item>
 
                 <ion-item class="border-draw" *ngIf="(match.team1Score == match.team2Score) && (match.start == '')">
-                    {{ match.team2 }}
+                    <span class="items">{{ match.team2 }}</span>
                     <ion-note item-right>
-                        {{ match.ownScore }} - {{ match.team2Score }}
+                        <span class="items">{{ match.ownScore }} - {{ match.team2Score }}</span>
                     </ion-note>
                 </ion-item>
 
                 <ion-item class="border-inc" *ngIf="match.status == 'A venir' ">
-                    {{ match.team2 }}
+                    <span class="items">{{ match.team2 }}</span>
                     <ion-note item-right>
-                        {{ match.start }}
+                        <span class="items">{{ match.start }}</span>
                     </ion-note>
                 </ion-item>
             </ion-list>
